<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Hello Android</string>
    <string name="company_name">Udacity</string>
    <string name="address_line1">2465 Latham St</string>
    <string name="address_line2">Mountain View, CA 94043</string>
    <string name="contact_number" tools:ignore="TypographyDashes">650–555-5555</string>
    <string name="hyperlink">https://www.udacity.com</string>

</resources>
