<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/hyperlink"
        android:src="@drawable/udacity" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_line1" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_line2" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_number" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hyperlink" />

</>